# Expoal

./: .gitignore  AGENTS.md  CLAUDE.md  FEEDBACK.md  README.md  launcher.py  pyproject.toml
.claude/: launch.json
.github/workflows/: pages.yml  release.yml
docs/: MARCA.md  METAS.md
installer/: expoal.iss
scripts/: capture_header.py  capture_landing.py  capture_screenshots.py  capture_update_banner.py  make_brand.py  make_icon.ps1  make_og.py  pack_ico.py  tune_header.py
site/: index.html
src/expoal/: __main__.py  config.py  dialogs.py  downloader.py  editor.py  engine.py  history.py  server.py  settings.py  subtitles.py  updater.py
src/expoal/web/: app.js  index.html  styles.css
