[project]
name = "expoal"
version = "1.1.0"
description = "Paste a link from YouTube, TikTok or Instagram and save the video to your own disk. 100% local, no third-party sites."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Munir Torres" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "yt-dlp>=2025.6.9",
    "pywebview>=5.1",
    "platformdirs>=4.2",
]

[project.scripts]
expoal = "expoal.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/expoal"]

[dependency-groups]
dev = [
    "playwright>=1.61.0",
    "pyinstaller>=6.21.0",
]
